# codecov-demo

./: .travis.yml  README.rst  codecov.yml  pyproject.toml  setup.cfg  setup.py  test_division.py  tox.ini
src/: division.py
