[metadata]
name = division
url = https://github.com/Midnighter/codecov-demo
author = Moritz E. Beber
author_email = midnighter@posteo.net
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Testing
license = Apache Software License Version 2.0
description = Demonstrate testing on a simple calculator.
long_description = file: README.rst
keywords =
    codecov

[options]
zip_safe = True
python_requires = >=3.6
tests_require =
    tox
py_modules =
    division
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
development =
    black
    isort
    tox

[bdist_wheel]
universal = 1
